<resources>
    <string name="app_name">GoStudy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="statistics">Statistics</string>


    <!-- sign in strings -->
    <string name="googleLogin">Google LOGIN</string>
    <string name="googleSignOut">Sign Out</string>
    <string name="login">LOGIN</string>

    <!-- tips strings -->
    <string name="empty"></string>
    <string name="Post">Post</string>
    <string name="enterTip">Add Tip</string>
    <string name="search">Search</string>

    <!-- ref strings -->
    <string name="addLink">Link</string>
    <string name="description">Description</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--welcome page strings-->
    <string name="welcome">Welcome to goStudy</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">RaghdZeidan1997</string>
    <string name="email">raghadzeidan@mail.tau.ac.il</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_three_dots">We can do something here. -Raghd</string>

    <string name="menu_home">Home</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_refs">References</string>
    <string name="menu_daily">Daily</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_choose_course_and_resource">PLEASE CHOOSE COURSE AND RESOURCE.</string>
    <string name="goal_n_3_5_hours_recitations_n_2_3_hours_homeworks_n_1_1_hours_proofs">Goal:\n 3/5 Hours Recitations\n 2/3 hours Homeworks\n 1/1 Hours Proofs</string>
    <string name="startbtn">startBtn</string>
    <string name="stopbtn">stopBtn</string>
    <string name="editbtn">editBtn</string>
    <string name="choose_a_nickname">choose a nickname</string>
    <string name="current_average">Current average</string>
    <string name="current_year">Current year</string>
    <string name="explain">you can always change the details in your personal page</string>
    <string name="past_courses">Past Courses</string>
    <string name="current_courses">Current Courses</string>
    <string name="current_semester">Current Semester</string>
    <string name="choose_your_cuurent_year">Choose your current year</string>
    <string name="choose_your_current_courses">Choose your current courses</string>
    <string name="progress">Progress</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="main_content">main content</string>
    <string name="action">Action</string>
    <string name="homework">Homework</string>
    <string name="study">Study</string>
    <string name="exam">Exam</string>
    <string name="tests">Tests</string>
    <string name="save">Save</string>
    <string name="activity_saved">Activity Saved</string>
    <string name="editAct">Edit</string>
    <string name="todo">TODO</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="practice">practice</string>


    <!--    courses array -->
    <string-array name="courses">
        <!-- first year -->
        <item>Calculus 1</item>
        <item>Linear Algebra 1</item>
        <item>Computer Science 1001</item>
        <item>Discrete Mathematics</item>
        <item>Probability 101</item>
        <item>Calculus 2</item>
        <item>Linear Algebra 2</item>
        <item>Software 1</item>
        <item>Data Structure</item>
        <!-- Second year -->
        <item>Statistics</item>
        <item>Computer Structure</item>
        <item>Algorithms</item>
        <item>Software Project</item>
        <item>Computational Models</item>
        <item>Operating Systems</item>
        <item>Logic</item>
        <item>Complexity</item>
        <!-- Third year -->
        <item>Compilation</item>
    </string-array>

    <!--  activities  -->
    <string-array name="activities">
        <item>Homework</item>
        <item>Recitations</item>
        <item>Practice</item>
        <item>Exam</item>
        <item>Extra</item>
    </string-array>

    <!--    years array -->
    <string-array name="years">
        <item>2</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>over 4</item>
    </string-array>

</resources>

