<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gostudy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.gostudy.StatsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_refs"
        android:name="com.example.gostudy.RefsFragment"
        android:label="@string/menu_refs"
        tools:layout="@layout/fragment_refs" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.example.gostudy.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.example.gostudy.DailyFragment"
        android:label="@string/menu_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.gostudy.ProgressFragment"
        android:label="Progress"
        tools:layout="@layout/fragment_progress" />

</navigation>